--- a/config/plugin.yml
+++ b/config/plugin.yml
@@ -1,6 +1,6 @@
 name: Gallery
-description: Add gallery to any content and have gallery page with galleries
+description: A plugin gallery for croogo cms.
 
-author: Zijad Redžić
-authorEmail: zijad.redzic@gmail.com
-authorUrl: http://www.demoveo.com
+author: Edinei L. Cipriani
+authorEmail: phpedinei@gmail.com
+authorUrl: http://www.edineicipriani.com.br
