--- a/webroot/plugin.yml
+++ b/webroot/plugin.yml
@@ -1,6 +1,6 @@
 name: Gallery
 description: Add gallery to any content and have gallery page with galleries
 
-author: Zijad Redžić
-authorEmail: zijad.redzic@gmail.com
-authorUrl: http://www.demoveo.com
+author: Edinei L. Cipriani
+authorEmail: phpedinei@gmail.com
+authorUrl: http://www.edineicipriani.com.br
